--- a/Intel 8086/Intel 8086.csproj
+++ b/Intel 8086/Intel 8086.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Intel_8086</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Procesor- Biblioteka\Procesor- Biblioteka.csproj" />
+  </ItemGroup>
+
 </Project>
