--- a/Symulator Intel 8086/Symulator Intel 8086.csproj
+++ b/Symulator Intel 8086/Symulator Intel 8086.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Procesor- Biblioteka\Procesor- Biblioteka.csproj" />
+  </ItemGroup>
+
 </Project>
